src/App.css
@media only screen and (min-width: 600px) {
    .outer-container {
        display: flex;
        flex-direction: column;
        height: 100vh;
    }

    .outer-header {
        display: flex;
        background: #1E3A8A;
        color: antiquewhite;
        align-items: center;
        padding: 0.5em 1em;
    }

    .outer-header > .name {
        font-family: Serif, sans-serif;
        font-size: 2em;
    }

    .outer-header > .link {
        margin-left: 3em;
    }
}

@media only screen and (max-width: 600px) {
    .outer-header {
        display: flex;
        flex-direction: row;
        background: #1E3A8A;
        color: antiquewhite;
        padding: 0.5em 1em;
        align-items: flex-end;
    }

    .outer-header > .link {
        margin-left: 1em;
    }

    .outer-header > .name {
        font-family: Serif, sans-serif;
        font-size: 1.5em;
    }
}

.outer-header a:link, a:visited, a:active {
    text-decoration: none;
    color: antiquewhite;
}

.viewport {
    max-width: 40em;
    margin: 0 auto;
    flex-grow: 1;
    overflow-y: auto;
}

